# nexa-gauge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PR.md  README.md  nodes.md  pyproject.toml  release-please-config.json  sample.json  sample_unsafe.json  setup.sh
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-pr-title.yml  pr-title.yml  publish.yml  release-automerge.yml  release-please.yml  release.yml
apps/lumiseval-api/: pyproject.toml
apps/lumiseval-api/lumiseval_api/: main.py
apps/lumiseval-cli/: pyproject.toml
apps/lumiseval-cli/lumiseval_cli/: main.py
apps/lumiseval-cli/lumiseval_cli/adapters/: base.py  huggingface.py  local_file.py  registry.py
apps/lumiseval-cli/lumiseval_cli/cli/: estimate.py  run.py  util.py
apps/lumiseval-cli/test_lumiseval_cli/: test_llm_cli_interface.py  test_local_adapter_streaming.py
apps/lumoseval-api/: pyproject.toml
apps/lumoseval-api/lumoseval_api/: main.py
apps/lumoseval-api/lumoseval_api/adapters/: huggingface.py  local_file.py  registry.py
apps/lumoseval-api/lumoseval_api/cli/: estimate.py  run.py  util.py
apps/lumoseval-api/test_lumoseval_api/: test_llm_cli_interface.py  test_local_adapter_streaming.py
apps/nexagauge-apps/: pyproject.toml
apps/nexagauge-apps/adapters/: base.py  huggingface.py  local_file.py  registry.py
apps/nexagauge-apps/ng_api/: main.py
apps/nexagauge-apps/ng_cli/: cache.py  delete.py  estimate.py  main.py  run.py  util.py
apps/nexagauge-apps/test_apps/test_adapters/: test_local_adapter_streaming.py
apps/nexagauge-apps/test_apps/test_ng_cli/: test_delete_cli.py  test_llm_cli_interface.py  test_transforms_cli.py
apps/nexagauge-apps/test_apps/test_ng_cli/fixtures/: hotpot_transform.py
docs/: PRODUCT_SUMMARY.md  architecture.md  cli-code-flow.md  dataset-transforms.md  execution-model.md  get-started.md  local-model-serving.md  runner-langfuse-observability-prd.md
