[project]
name = "lumis-eval"
version = "0.1.0"
description = "Agentic LLM evaluation pipeline orchestrating RAGAS, DeepEval, and Giskard"
requires-python = ">=3.10"
dependencies = [
    "lumiseval-core",
    "lumiseval-graph",
    "lumiseval-cli",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.sources]
lumiseval-core  = { workspace = true }
lumiseval-graph = { workspace = true }
lumiseval-cli      = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/lumiseval-core/test_lumiseval_core",
    "packages/lumiseval-graph/test_lumiseval_graph",
]
