[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "nexa-gauge"
version = "0.1.2"
description = "A graph-based toolkit for evaluating LLM and RAG outputs with repeatable quality metrics and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "NexaGauge Contributors" },
]
keywords = [
    "llm",
    "evaluation",
    "rag",
    "benchmarking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=3.0.0",
    "litellm==1.82.6",
    "tokencost>=0.1.26",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "semchunk>=2.2.0",
]

[project.optional-dependencies]
huggingface = [
    "datasets>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Sardhendu/nexa-gauge"
Repository = "https://github.com/Sardhendu/nexa-gauge"
Issues = "https://github.com/Sardhendu/nexa-gauge/issues"
Documentation = "https://github.com/Sardhendu/nexa-gauge/tree/main/docs"
Security = "https://github.com/Sardhendu/nexa-gauge/security/policy"

[project.scripts]
nexagauge = "ng_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = [
    "apps/nexagauge-apps/ng_api",
    "apps/nexagauge-apps/ng_cli",
    "apps/nexagauge-apps/adapters",
    "packages/nexagauge-core/ng_core",
    "packages/nexagauge-graph/ng_graph",
]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "apps/",
    "packages/",
    "docs/",
    "sample.json",
    "Makefile",
    "setup.sh",
    "pyproject.toml",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/nexagauge-core/test_ng_core",
    "packages/nexagauge-graph/test_ng_graph",
    "apps/nexagauge-apps/test_apps",
]
