[project]
name = "lumiseval-api"
version = "0.1.0"
description = "FastAPI REST interface for lumis-eval"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "lumiseval-graph",
]

[tool.uv.sources]
lumiseval-graph = { workspace = true }

[project.scripts]
lumiseval-api = "lumiseval_api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lumiseval_api"]
