[project]
name = "nexagauge-apps"
version = "0.1.0"
description = "Typer CLI and FastAPI surfaces for nexa-gauge"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "nexagauge-graph",
]

[tool.uv.sources]
nexagauge-graph = { workspace = true }

[project.scripts]
nexagauge = "ng_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ng_api", "ng_cli", "adapters"]
